<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaDetails">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/adView"
        android:layout_marginBottom="10dp"

        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/layout"
            android:background="@color/buttoncolor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navbar_title"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:layout_marginStart="11dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/ivback"
                android:textStyle="bold"
                android:textColor="@color/lightpurple"/>
            <ImageView
                android:id="@+id/ivback"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"

                android:src="@drawable/baseline_arrow_back_24" />
        </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/cardviewbg"
        app:cardCornerRadius="20dp"
        app:strokeWidth="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivyoga"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivyoga"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title"
                android:textColor="@color/textcolordark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv"

        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/viddhi"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/viddhi"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/kruti"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viddhi"

         android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/labh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/kruti"
         android:layout_marginTop="10dp"
        android:visibility="gone"
        android:fontFamily="@font/roboto"
        android:text="@string/labh"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/laabh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labh"
android:visibility="gone"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/savdhani"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/laabh"
         android:layout_marginTop="10dp"
        android:visibility="gone"
        android:fontFamily="@font/roboto"
        android:text="@string/savdhani"
        android:layout_marginLeft="10dp"
        android:textColor="@color/textcolordark"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/svaadh"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/savdhani"
android:visibility="gone"
         android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/savdhani"
        android:layout_marginHorizontal="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:textStyle="bold" />

     </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:visibility="gone"

        android:layout_gravity="center_horizontal"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
</RelativeLayout>