<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/layout"
        android:background="@color/buttoncolor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navbar_title"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:id="@+id/tvtitle"
            android:layout_marginStart="11dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/ivback"
            android:textStyle="bold"
            android:textColor="@color/lightpurple"/>
        <ImageView
            android:id="@+id/ivback"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"

            android:src="@drawable/baseline_arrow_back_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/buttoncolor"
        android:layout_height="50dp"
        android:layout_below="@id/layout"
        android:id="@+id/lin">
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/first"
            android:layout_alignParentStart="true"
            android:background="@color/appcolor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/firsttv"
                android:layout_gravity="center"
                android:text="@string/suruaatisreni"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secound"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/buttoncolor"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/madyavarti"
                android:id="@+id/secounttv"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@color/buttoncolor"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unnat"
                android:id="@+id/thirdtv"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_below="@id/lin"
    android:layout_above="@id/adView"
    android:layout_marginBottom="10dp"
    android:id="@+id/recyclerview"/>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
</RelativeLayout>